<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.github.client.authentication.AuthActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:id="@+id/welcome_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/intro_header"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/welcome_msg"
            android:layout_centerHorizontal="true"
            android:background="@drawable/git_icon"
            android:text="@string/intro_header" />

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon"
            android:layout_centerInParent="true"
            android:layout_marginTop="80dp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/intro_summary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/access_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:text="@string/grant_private" />

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_bg"
                android:onClick="signIn"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/two_factor_auth_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/two_factor_auth_summary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/auth_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_code"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/submit_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_bg"
                android:onClick="submit"
                android:text="@string/action_submit"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
