<resources>
    <string name="app_name">GitApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_auth">Sign in</string>

    <!-- login -->
    <string name="intro_header">Welcome to GitApp!</string>
    <string name="intro_summary">Login to your GitHub Account</string>
    <string name="two_factor_auth_summary">You are about to receive a two-factor authentication code via sms or another app.\n\nPlease enter the received code:</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_code">Authentication code</string>
    <string name="grant_private">Grant access to private repositories</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_submit">Submit</string>

    <!-- error -->
    <string name="error_invalid_auth_title">Authentication failed</string>
    <string name="error_unknown">Oops, an error has occurred. Try again later.</string>
    <string name="error_connection">Please check your Internet connection and try again.</string>
    <string name="error_missing_credentials">Username or password missing.</string>
    <string name="error_missing_code">Two factor authentication code missing.</string>
    <string name="error_invalid_auth_body_1">Please make sure to enter valid credentials.</string>
    <string name="error_invalid_auth_body_2">Login attempts limit reached. The service is hence temporarily un-accessible, try again later.</string>

    <!-- User -->
    <string name="user_name_label">Name:</string>
    <string name="user_mail_label">Mail:</string>
    <string name="user_repos_label">All Repositories:</string>
    <string name="user_unknown">Unknown</string>
    <string name="user_repos_none">No Repositories found</string>

    <!-- action -->
    <string name="action_sync_repos">Synchronizing Repositories</string>
    <string name="action_logout">Logout</string>

    <string name="progress_details">Fetching details…</string>
</resources>
